--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,10 @@
 @import "tailwindcss";
-#root {
-  
- 
-  padding: 2rem;
+#root{
+  margin:0;
   text-align: center;
 }
 
-.logo {
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -40,4 +38,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
